just saw what it looked like on a laptop screen and fixed the overlap issues. removed some article links in the side navbar because it wouldn't extend to show developer team

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,8 +224,9 @@ body {
     padding: 0;
     width: 220px;
     position: fixed;
-    height: 1000px;
+    height: 100%;
     overflow: auto;
+    font-size: 15px;
 }
 
 .sidebar a {
